--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hzzly_r",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -16,12 +16,16 @@
     "chalk": "^2.3.0",
     "commander": "^2.11.0",
     "download-git-repo": "^1.0.1",
+    "express": "^4.16.2",
     "fs": "^0.0.1-security",
+    "fs-extra": "^4.0.2",
     "inquirer": "^4.0.0",
     "moment": "^2.19.1",
+    "opn": "^5.1.0",
     "ora": "^1.3.0",
     "path": "^0.12.7",
     "rimraf": "^2.6.2",
+    "serve-static": "^1.13.1",
     "user-home": "^2.0.0"
   }
 }
