--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "hzzly_r",
-  "version": "1.0.1",
-  "description": "",
+  "name": "hzzly-cli",
+  "version": "1.0.9",
+  "description": "hzzly 脚手架",
   "main": "index.js",
   "bin": {
-    "hzzly_r": "bin/hzzly_r",
-    "hzzly_r-init": "bin/hzzly_r-init"
+    "hzzly": "bin/hzzly.js"
   },
+  "files": [
+    "bin/"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "hzzly": "hzzly"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hzzly/hzzly-cli.git"
   },
   "author": "hjingren@aliyun.com",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.3.0",
-    "commander": "^2.11.0",
-    "download-git-repo": "^1.0.1",
-    "fs": "^0.0.1-security",
-    "inquirer": "^4.0.0",
-    "moment": "^2.19.1",
-    "ora": "^1.3.0",
+    "boxen": "^4.1.0",
+    "chalk": "^2.4.2",
+    "commander": "^2.20.0",
+    "download-git-repo": "^2.0.0",
+    "fs-extra": "^8.1.0",
+    "inquirer": "^6.5.0",
+    "ora": "^3.4.0",
     "path": "^0.12.7",
-    "rimraf": "^2.6.2",
-    "user-home": "^2.0.0"
+    "rimraf": "^2.6.3",
+    "update-notifier": "^3.0.1"
   }
 }
