--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hzzly-cli",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "hzzly 脚手架",
   "main": "index.js",
   "bin": {
     "hzzly": "bin/hzzly.js"
   },
   "files": [
-    "bin/"
+    "bin/",
+    "lib/"
   ],
   "scripts": {
     "hzzly": "hzzly"
